--- a/Readme
+++ b/Readme
@@ -1,3 +1,4 @@
 Ma vidéo pour la quete 09 = https://www.loom.com/share/7d0777231519480fb0d05df8eb36dcc8
 Ma vidéo pour la quete 10 = https://www.loom.com/share/446ed6e8791b4e5c96dcfc017cca26b3
 Ma vidéo pour la quete 11 = https://www.loom.com/share/c6be977c6d134b11a084ee8af9aad18e
+Ma vidéo pour la quete 12 = https://www.loom.com/share/ca6d2947edc34c9f92f5856a156d6b3f
